<resources>
    <string name="app_name">GuessNumber</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adivina_el_numero">Adivina el número</string>
    <string name="jugar">Jugar</string>
    <string name="resultado">Resultado</string>
    <string name="nombre">Nombre</string>
    <string name="n_intentos">Nº intentos</string>
    <string name="a_jugar">¡A jugar!</string>
    <string name="has_ganado">¡HAS GANADO!</string>
    <string name="has_perdido">¡HAS PERDIDO!</string>
    <string name="numero_de_intentos">Numero de intentos:</string>
    <string name="numero_de_nintentos">Número de \nintentos:</string>
    <string name="que_numero">¿Número?:</string>
    <string name="numero">Número</string>
    <string name="numero2">Número: </string>
    <string name="nombre_">Nombre:</string>
    <string name="nuevo_intento">Nuevo intento</string>
    <string name="el_n_mero_a_adivinar_es_menor">El número a adivinar es menor</string>
    <string name="el_n_mero_a_adivinar_es_mayor">El número a adivinar es mayor</string>
</resources>