<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.guessnumber.usecase.PlayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PlayFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_30dp" />

        <TextView
            android:id="@+id/txtNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que_numero"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintVertical_bias="0.1" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="txtNumero" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumero"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_marginStart="@dimen/_32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtNumero"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/txtNumero">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:text="@={viewmodel.numero}"
                android:textSize="@dimen/_25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/jugar"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tilNumero" />

        <Button
            android:id="@+id/btnNuevoIntento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_intento"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/btnJugar"
            app:layout_constraintTop_toBottomOf="@+id/tilNumero" />

        <TextView
            android:id="@+id/tvNumeroEsMayor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/el_n_mero_a_adivinar_es_mayor"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnJugar"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tilNumero" />

        <TextView
            android:id="@+id/tvNumeroEsMenor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/el_n_mero_a_adivinar_es_menor"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnJugar"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tilNumero" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>